# cresus

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README  TODOLIST  configure.ac  main.c
engine/: CMakeLists.txt  bigdata.h  calendar.c  calendar.h  candle.c  candle.h  cert.h  cluster.c  cluster.h  common_opt.c  common_opt.h  engine.c  engine.h  engine_v2.c  engine_v2.h  order.c  order.h  portfolio.c  portfolio.h  position.c  position.h  timeline.c  timeline.h
framework/: CMakeLists.txt  alloc.h  balance-sheet.h  candle.c  candle.h  cash-flow.h  common_opt.c  common_opt.h  dividends.h  engine.c  engine.h  event.h  event_handler.c  event_handler.h  fundamentals.h  income-statement.h  indicator.c  indicator.h  input.c  input.h  list.h  module.c  module.h  plist.h  price.h  quotes.h  slist.h  splits.h  time.h  time64.c  time64.h  time_info.c  time_info.h  timeline.c  timeline.h  timeline_entry.c  timeline_entry.h  timeline_v2.c  timeline_v2.h  track.c  (+5 more)
indicator/: CMakeLists.txt  atr.c  atr.h  bollinger.c  bollinger.h  esi.c  esi.h  heikin_ashi.c  heikin_ashi.h  hilo.c  hilo.h  jtrend.c  jtrend.h  linear_reg.c  linear_reg.h  lowest.c  lowest.h  macd.c  macd.h  metrics.c  metrics.h  mobile.c  mobile.h  roc.c  roc.h  rs_dorsey.c  rs_dorsey.h  rs_mansfield.c  rs_mansfield.h  rs_roc.c  rs_roc.h  rsi.c  rsi.h  smi.c  smi.h  srsi.c  srsi.h  stochastic.c  stochastic.h  stoploss.c  (+13 more)
input/: CMakeLists.txt  b4b.c  b4b.h  euronext.c  euronext.h  google.c  google.h  input_wrapper.h  inwrap.c  inwrap.h  json.c  json.h  kraken.c  kraken.h  mdgms.c  mdgms.h  xtrade.c  xtrade.h  yahoo.c  yahoo.h  yahoo_v7.c  yahoo_v7.h
input/balance-sheet/: CMakeLists.txt  balance-sheet.c  eodhistoricaldata.c
input/cash-flow/: CMakeLists.txt  cash-flow.c  eodhistoricaldata.c
input/dividends/: CMakeLists.txt  dividends.c  eodhistoricaldata.c
input/fundamentals/: CMakeLists.txt  eodhistoricaldata.c  fundamentals.c
input/income-statement/: CMakeLists.txt  eodhistoricaldata.c  income-statement.c
input/price/: CMakeLists.txt  b4b.c  euronext.c  kraken.c  mdgms.c  price.c  xtrade.c  yahoo_v7.c
input/quotes/: CMakeLists.txt  b4b.c  euronext.c  kraken.c  mdgms.c  quotes.c  xtrade.c  yahoo_v7.c
input/splits/: CMakeLists.txt  eodhistoricaldata.c  splits.c
lost+found/module/: mod_mma_simple.c  mod_srsi.h  mod_supres.c  mod_zigzag.c
lost+found/program/: cresus_atr.c  cresus_entry.c  cresus_ex.c  cresus_rsi.c  cresus_swing.c  cresus_vp  cresus_vp.c  cresus_xx
lost+found/sample/: basics.c  cresus_zz.c  development_cluster.c  development_sim.c  ema_snowball.c  roc.c  zz_snowball.c
lost+found/sim/: CMakeLists.txt  sim.c  sim.h  statistics.c
lost+found/trading/: portfolio.c  portfolio.h  position.h
lost+found/utest/: mobile.c
math/: CMakeLists.txt  average.c  average.h
module/: mod_ema_ha.c  mod_ema_ha.h  mod_mma_simple.c  mod_mma_simple.h  mod_srsi.c  mod_srsi.h  mod_stoploss.c  mod_stoploss.h  mod_supres.c  mod_supres.h  mod_zigzag.c  mod_zigzag.h
program/: cresus_atr.c  cresus_entry.c  cresus_ex.c  cresus_inv.c  cresus_rsi.c  cresus_swing.c  cresus_vp.c  cresus_xx.c  cresus_zz.c
program/.svn/: all-wcprops  entries
program/.svn/text-base/: Makefile.svn-base  buy_points.txt.svn-base  cresus_atr.c.svn-base  cresus_inv.c.svn-base  tips.txt.svn-base
sample/: CMakeLists.txt  basics.c  cresus_zz.c  development.c  development_cluster.c  development_roc.c  development_sim.c  development_snowball.c  ema_snowball.c  roc.c  zz_snowball.c
script/: get_list_FCHI  get_list_yahoo  license  list.yahoo  list_FCHI.yahoo  superclass  todolist  yahoo
sets/: AAPL.US.json  AAPL.US_DIVIDENDS.csv  AAPL.US_SPLITS.csv  AAPL.yahoo  Bitcoin.kraken  Microsoft.yahoo  Palladium.mdgms
sim/: CMakeLists.txt  position.c  position.h  sim.c  sim.h
system/: CMakeLists.txt  buy_monthly.c  buy_once.c  buy_red_filtered.c  buy_red_no_filter.c  buy_red_sell_green_filtered.c  sell_in_may.c
trading/: portfolio.c  portfolio.h  position.c  position.h  statistics.c  statistics.h  trade.c  trade.h
unit_test/: CMakeLists.txt  track_add_balance_sheet.c  track_add_cash_flow.c  track_add_income_statement.c
